--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,3 +21,9 @@ html, body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #a8bbbf;
 }
+
+* {
+  border-width: 0;
+  border-style: solid;
+  border-color: #e5e7eb;
+}
