长按添加移动选项

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 @use './vfm.scss';
 @use './gridstack-extra.scss';
 @use './transition.scss';
+@use './animation.scss';
 
 html, body {
   overflow: hidden;
