--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @use './gridstack-extra.scss';
 @use './transition.scss';
 @use './animation.scss';
+@use './elevation.scss';
 
 html, body {
   overflow: hidden;
