--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @use './transition.scss';
 @use './animation.scss';
 @use './elevation.scss';
+@use './tiptap/index.scss';
 
 html, body {
   overflow: hidden;
